generate schema
