# internal/ent/generated/openapi.json
@@ -437,6 +437,20 @@
               "schema": {
                 "type": "object",
                 "properties": {
+                  "created_at": {
+                    "type": "string",
+                    "format": "date-time"
+                  },
+                  "updated_at": {
+                    "type": "string",
+                    "format": "date-time"
+                  },
+                  "created_by": {
+                    "type": "integer"
+                  },
+                  "updated_by": {
+                    "type": "integer"
+                  },
                   "name": {
                     "type": "string"
                   },
@@ -459,6 +473,8 @@
                   }
                 },
                 "required": [
+                  "created_at",
+                  "updated_at",
                   "name",
                   "description",
                   "logo_url",
@@ -600,6 +616,16 @@
               "schema": {
                 "type": "object",
                 "properties": {
+                  "updated_at": {
+                    "type": "string",
+                    "format": "date-time"
+                  },
+                  "created_by": {
+                    "type": "integer"
+                  },
+                  "updated_by": {
+                    "type": "integer"
+                  },
                   "name": {
                     "type": "string"
                   },
@@ -2841,6 +2867,20 @@
             "type": "string",
             "format": "uuid"
           },
+          "created_at": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "updated_at": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "created_by": {
+            "type": "integer"
+          },
+          "updated_by": {
+            "type": "integer"
+          },
           "name": {
             "type": "string"
           },
@@ -2862,6 +2902,8 @@
         },
         "required": [
           "id",
+          "created_at",
+          "updated_at",
           "name",
           "description",
           "logo_url",
@@ -2875,6 +2917,20 @@
             "type": "string",
             "format": "uuid"
           },
+          "created_at": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "updated_at": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "created_by": {
+            "type": "integer"
+          },
+          "updated_by": {
+            "type": "integer"
+          },
           "name": {
             "type": "string"
           },
@@ -2887,6 +2943,8 @@
         },
         "required": [
           "id",
+          "created_at",
+          "updated_at",
           "name",
           "description",
           "logo_url"
@@ -2899,6 +2957,20 @@
             "type": "string",
             "format": "uuid"
           },
+          "created_at": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "updated_at": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "created_by": {
+            "type": "integer"
+          },
+          "updated_by": {
+            "type": "integer"
+          },
           "name": {
             "type": "string"
           },
@@ -2911,6 +2983,8 @@
         },
         "required": [
           "id",
+          "created_at",
+          "updated_at",
           "name",
           "description",
           "logo_url"
@@ -2923,6 +2997,20 @@
             "type": "string",
             "format": "uuid"
           },
+          "created_at": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "updated_at": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "created_by": {
+            "type": "integer"
+          },
+          "updated_by": {
+            "type": "integer"
+          },
           "name": {
             "type": "string"
           },
@@ -2935,6 +3023,8 @@
         },
         "required": [
           "id",
+          "created_at",
+          "updated_at",
           "name",
           "description",
           "logo_url"
@@ -3190,6 +3280,20 @@
             "type": "string",
             "format": "uuid"
           },
+          "created_at": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "updated_at": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "created_by": {
+            "type": "integer"
+          },
+          "updated_by": {
+            "type": "integer"
+          },
           "name": {
             "type": "string"
           },
@@ -3202,6 +3306,8 @@
         },
         "required": [
           "id",
+          "created_at",
+          "updated_at",
           "name",
           "description",
           "logo_url"
@@ -3214,6 +3320,20 @@
             "type": "string",
             "format": "uuid"
           },
+          "created_at": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "updated_at": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "created_by": {
+            "type": "integer"
+          },
+          "updated_by": {
+            "type": "integer"
+          },
           "name": {
             "type": "string"
           },
@@ -3226,6 +3346,8 @@
         },
         "required": [
           "id",
+          "created_at",
+          "updated_at",
           "name",
           "description",
           "logo_url"
@@ -3721,6 +3843,20 @@
             "type": "string",
             "format": "uuid"
           },
+          "created_at": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "updated_at": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "created_by": {
+            "type": "integer"
+          },
+          "updated_by": {
+            "type": "integer"
+          },
           "name": {
             "type": "string"
           },
@@ -3733,6 +3869,8 @@
         },
         "required": [
           "id",
+          "created_at",
+          "updated_at",
           "name",
           "description",
           "logo_url"
